Modify arguments to an EmbeddedWebServer constructor due to an API enhancement